// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> create dropdown component 1`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-1eLjY2eY"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button--light sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 2`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-AncL-hpMh"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select blue"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button--light sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 3`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-5aH0EJv0Y"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        standard={true}
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button--light sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 4`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-s2xPbHtFz"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button--light sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> create dropdown component 5`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-LCBg6DP4O"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button--light sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
